--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "cryptiles": "^4.1.3",
     "growl": "^1.10.5",
     "hermione": "^1.2.1",
-    "html-reporter": "^3.1.2"
+    "html-reporter": "^3.1.2",
+    "minimatch": "^3.0.4"
   },
   "devDependencies": {},
   "scripts": {
